--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -21,7 +21,7 @@ jobs:
       - name: Set up Node.js
         uses: actions/setup-node@v3
         with:
-          node-version: '16' # or your preferred Node.js version
+          node-version: "18.19.0"
 
       # Install dependencies
       - name: Install dependencies
@@ -30,7 +30,3 @@ jobs:
       # Run TypeScript type checking
       - name: Run TypeScript type check
         run: npm run tsc
-
-      # Run lint
-      - name: Run lint
-        run: npm run lint
