--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -25,8 +25,12 @@ jobs:
 
       # Install dependencies
       - name: Install dependencies
-        run: npm install
+        run: npm install --legacy-peer-deps
 
       # Run TypeScript type checking
       - name: Run TypeScript type check
         run: npm run tsc
+
+      # Run tests
+      - name: Run tests
+        run: npm test
